--- a/infosys-oauth/src/main/resources/application.yml
+++ b/infosys-oauth/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring: 
   application:
-    name: backend-oauth
+    name: infosys-oauth
   datasource:
     driver-class-name: org.h2.Driver
     username: root
