--- a/infosys-eureka/pom.xml
+++ b/infosys-eureka/pom.xml
@@ -13,8 +13,6 @@
   <properties>
 		<java.version>1.8</java.version>
 		<spring-cloud.version>Hoxton.SR3</spring-cloud.version>
-		<docker.image.name>infosys-eureka</docker.image.name>
-		<docker.image.tag>v1</docker.image.tag>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -86,7 +84,7 @@
              <artifactId>docker-maven-plugin</artifactId>
              <version>1.2.2</version>
              <configuration>
-                 <imageName>${docker.image.name}:${docker.image.tag}</imageName>
+                 <imageName>infosys/eureka:test</imageName>
                  <dockerDirectory>${basedir}/target/dockerfile</dockerDirectory>
                  <resources>
                      <resource>
