--- a/infosys-gateway/pom.xml
+++ b/infosys-gateway/pom.xml
@@ -15,8 +15,6 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<spring-cloud.version>Hoxton.SR3</spring-cloud.version>
-		<docker.image.name>infosys-gateway</docker.image.name>
-		<docker.image.tag>v1</docker.image.tag>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -101,7 +99,7 @@
              <artifactId>docker-maven-plugin</artifactId>
              <version>1.2.2</version>
              <configuration>
-                 <imageName>${docker.image.name}:${docker.image.tag}</imageName>
+                 <imageName>infosys/gateway:test</imageName>
                  <dockerDirectory>${basedir}/target/dockerfile</dockerDirectory>
                  <resources>
                      <resource>
