--- a/infosys-oauth/pom.xml
+++ b/infosys-oauth/pom.xml
@@ -122,7 +122,7 @@
              <artifactId>docker-maven-plugin</artifactId>
              <version>1.2.2</version>
              <configuration>
-                 <imageName>${docker.image.name}:${docker.image.tag}</imageName>
+                 <imageName>infosys-oauth:test</imageName>
                  <dockerDirectory>${basedir}/target/dockerfile</dockerDirectory>
                  <resources>
                      <resource>
