--- a/infosys-gateway/pom.xml
+++ b/infosys-gateway/pom.xml
@@ -15,7 +15,7 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<spring-cloud.version>Hoxton.SR3</spring-cloud.version>
-		<docker.image.name>infosys/infosys-gateway</docker.image.name>
+		<docker.image.name>satriaprayoga/infosys-gateway</docker.image.name>
 		<docker.image.tag>${env.BUILD_NAME}</docker.image.tag>
 	</properties>
 	<dependencies>
