--- a/infosys-search/pom.xml
+++ b/infosys-search/pom.xml
@@ -12,7 +12,7 @@
    <properties>
 		<java.version>1.8</java.version>
 		<spring-cloud.version>Hoxton.SR3</spring-cloud.version>
-		<docker.image.name>infosys/infosys-search</docker.image.name>
+		<docker.image.name>satriaprayoga/infosys-search</docker.image.name>
 		<docker.image.tag>${env.BUILD_NAME}</docker.image.tag>
 	</properties>
 	<dependencies>
