--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,13 +1,40 @@
 version: '2'
 services: 
+    rabbitmq:
+        image: rabbitmq:3-management-alpine
+        ports:
+            - "5672:5672"
+            - "15672:15672"
+
+    elasticsearch:
+        image: docker.elastic.co/elasticsearch/elasticsearch:7.4.0
+        container_name: elasticsearch
+        environment:
+            - xpack.security.enabled=false
+            - discovery.type=single-node
+        ulimits:
+            memlock:
+            soft: -1
+            hard: -1
+            nofile:
+            soft: 65536
+            hard: 65536
+        cap_add:
+            - IPC_LOCK
+        volumes:
+            - elasticsearch-data:/usr/share/elasticsearch/data
+        ports:
+            - 9200:9200
+            - 9300:9300
+
     infosys-eureka:
-        image: satriaprayoga/infosys-eureka:test
+        image: satriaprayoga/infosys-eureka:${BUILD_NAME}
         mem_limit: 1073741824
         ports: 
             - "8761:8761"
 
     infosys-gateway:
-        image: satriaprayoga/infosys-gateway:test
+        image: satriaprayoga/infosys-gateway:${BUILD_NAME}
         mem_limit: 1073741824
         ports: 
             - "5555:5555"
@@ -20,8 +47,26 @@ services:
             EUREKASERVER_PORT: "8761"
             RABBITMQ_PORT: "5672"
 
+    infosys-message:
+        image: satriaprayoga/infosys-oauth:${BUILD_NAME}
+        mem_limit: 1073741824
+        ports: 
+            - "8081:8081"
+        links: 
+            - "infosys-eureka:infosys-eureka"
+            - "infosys-gateway:infosys-gateway"
+            - "rabbitmq:rabbitmq"
+        environment: 
+            SERVER_PORT: "8081"
+            EUREKASERVER_URI: "http://infosys-eureka:8761/eureka"
+            EUREKASERVER_PORT: "8761"
+            GATEWAYSERVER_PORT: "5555"
+            RABBITMQ_URI: "rabbitmq"
+            RABBITMQ_PORT: "5672"
+
+
     infosys-oauth:
-        image: satriaprayoga/infosys-authserver:test
+        image: satriaprayoga/infosys-oauth:${BUILD_NAME}
         mem_limit: 1073741824
         ports: 
             - "8082:8082"
@@ -34,8 +79,8 @@ services:
             EUREKASERVER_PORT: "8761"
             GATEWAYSERVER_PORT: "5555"
 
-    infosys-data:
-        image: satriaprayoga/infosys-data:test
+    infosys-destination:
+        image: satriaprayoga/infosys-destination:${BUILD_NAME}
         mem_limit: 1073741824
         ports: 
             - "8083:8083"
@@ -53,24 +98,63 @@ services:
             TOKENINFO_URI: "http://infosys-oauth:8082/oauth/check_token/"
             RABBITMQ_URI: "rabbitmq"
             RABBITMQ_PORT: "5672"
+
+    infosys-customer:
+        image: satriaprayoga/infosys-customer:${BUILD_NAME}
+        mem_limit: 1073741824
+        ports: 
+            - "8084:8084"
+        links: 
+            - "infosys-eureka:infosys-eureka"
+            - "infosys-gateway:infosys-gateway"
+            - "infosys-oauth:infosys-oauth"
+            - "rabbitmq:rabbitmq"
+        environment: 
+            SERVER_PORT: "8084"
+            EUREKASERVER_URI: "http://infosys-eureka:8761/eureka"
+            EUREKASERVER_PORT: "8761"
+            GATEWAYSERVER_PORT: "5555"
+            USERINFO_URI: "http://infosys-oauth:8082/user/"
+            TOKENINFO_URI: "http://infosys-oauth:8082/oauth/check_token/"
+            RABBITMQ_URI: "rabbitmq"
+            RABBITMQ_PORT: "5672"    
+            
+    infosys-search:
+        image: satriaprayoga/infosys-search:${BUILD_NAME}
+        mem_limit: 1073741824
+        ports: 
+            - "8085:8085"
+        links: 
+            - "infosys-eureka:infosys-eureka"
+            - "infosys-gateway:infosys-gateway"
+            - "rabbitmq:rabbitmq"
+            - "elasticsearch:elasticsearch"
+        environment: 
+            SERVER_PORT: "8085"
+            EUREKASERVER_URI: "http://infosys-eureka:8761/eureka"
+            EUREKASERVER_PORT: "8761"
+            GATEWAYSERVER_PORT: "5555"
+            RABBITMQ_URI: "rabbitmq"
+            RABBITMQ_PORT: "5672"    
+            ELASTICSEARCH_URI: "elasticsearch"
+            ELASTICSEARCH_PORT: "9200"
     
-    infosys-web-api:
-        image: satriaprayoga/infosys-webapi:test
+    infosys-webclient:
+        image: satriaprayoga/infosys-webclient:${BUILD_NAME}
         mem_limit: 1073741824
         ports:
             - "9001:9001"
         links: 
             - "infosys-eureka:infosys-eureka"
             - "infosys-gateway:infosys-gateway"
-            - "infosys-data:infosys-data"
+            - "infosys-oauth:infosys-oauth"
+            - "infosys-customer:infosys-customer"
+            - "rabbitmq:rabbitmq"
         environment: 
             SERVER_PORT: "9001"
             EUREKASERVER_URI: "http://infosys-eureka:8761/eureka"
             EUREKASERVER_PORT: "8761"
             GATEWAYSERVER_PORT: "5555"
+            TOKENINFO_URI: "http://infosys-oauth:8082/oauth/token"
             
-    rabbitmq:
-        image: rabbitmq:3-management-alpine
-        ports:
-            - "5672:5672"
-            - "15672:15672"
+    
