--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,18 +1,19 @@
 version: '2'
 services: 
     rabbitmq:
+        mem_limit: 1073741824
         image: rabbitmq:3-management-alpine
         ports:
             - "5672:5672"
             - "15672:15672"
     infosys-eureka:
-        image: satriaprayoga/infosys-eureka:${BUILD_NAME}
+        image: satriaprayoga/infosys-eureka:infosysApp-master-20200517160650-14
         mem_limit: 1073741824
         ports: 
             - "8761:8761"
     
     infosys-gateway:
-        image: satriaprayoga/infosys-gateway:${BUILD_NAME}
+        image: satriaprayoga/infosys-gateway:infosysApp-master-20200517160650-14
         mem_limit: 1073741824
         ports: 
             - "5555:5555"
@@ -26,7 +27,7 @@ services:
             RABBITMQ_PORT: "5672"
     
     infosys-message:
-        image: satriaprayoga/infosys-oauth:${BUILD_NAME}
+        image: satriaprayoga/infosys-oauth:infosysApp-master-20200517160650-14
         mem_limit: 1073741824
         ports: 
             - "8081:8081"
@@ -44,7 +45,7 @@ services:
     
     
     infosys-oauth:
-        image: satriaprayoga/infosys-oauth:${BUILD_NAME}
+        image: satriaprayoga/infosys-oauth:infosysApp-master-20200517160650-14
         mem_limit: 1073741824
         ports: 
             - "8082:8082"
@@ -57,50 +58,10 @@ services:
             EUREKASERVER_PORT: "8761"
             GATEWAYSERVER_PORT: "5555"
     
-    infosys-destination:
-        image: satriaprayoga/infosys-destination:${BUILD_NAME}
-        mem_limit: 1073741824
-        ports: 
-            - "8083:8083"
-        links: 
-            - "infosys-eureka:infosys-eureka"
-            - "infosys-gateway:infosys-gateway"
-            - "infosys-oauth:infosys-oauth"
-            - "infosys-message:infosys-message"
-            - "rabbitmq:rabbitmq"
-        environment: 
-            SERVER_PORT: "8083"
-            EUREKASERVER_URI: "http://infosys-eureka:8761/eureka"
-            EUREKASERVER_PORT: "8761"
-            GATEWAYSERVER_PORT: "5555"
-            USERINFO_URI: "http://infosys-oauth:8082/user/"
-            TOKENINFO_URI: "http://infosys-oauth:8082/oauth/check_token/"
-            RABBITMQ_URI: "rabbitmq"
-            RABBITMQ_PORT: "5672"
-    
-    infosys-customer:
-        image: satriaprayoga/infosys-customer:${BUILD_NAME}
-        mem_limit: 1073741824
-        ports: 
-            - "8084:8084"
-        links: 
-            - "infosys-eureka:infosys-eureka"
-            - "infosys-gateway:infosys-gateway"
-            - "infosys-oauth:infosys-oauth"
-            - "infosys-message:infosys-message"
-            - "rabbitmq:rabbitmq"
-        environment: 
-            SERVER_PORT: "8084"
-            EUREKASERVER_URI: "http://infosys-eureka:8761/eureka"
-            EUREKASERVER_PORT: "8761"
-            GATEWAYSERVER_PORT: "5555"
-            USERINFO_URI: "http://infosys-oauth:8082/user/"
-            TOKENINFO_URI: "http://infosys-oauth:8082/oauth/check_token/"
-            RABBITMQ_URI: "rabbitmq"
-            RABBITMQ_PORT: "5672"    
+     
             
     infosys-search:
-        image: satriaprayoga/infosys-search:${BUILD_NAME}
+        image: satriaprayoga/infosys-search:infosysApp-master-20200517160650-14
         mem_limit: 1073741824
         ports: 
             - "8085:8085"
@@ -108,7 +69,6 @@ services:
             - "infosys-eureka:infosys-eureka"
             - "infosys-gateway:infosys-gateway"
             - "infosys-oauth:infosys-oauth"
-            - "infosys-message:infosys-message"
             - "rabbitmq:rabbitmq"
         environment: 
             SERVER_PORT: "8085"
@@ -120,20 +80,5 @@ services:
             RABBITMQ_URI: "rabbitmq"
             RABBITMQ_PORT: "5672"    
     
-    infosys-webclient:
-        image: satriaprayoga/infosys-webclient:${BUILD_NAME}
-        mem_limit: 1073741824
-        ports:
-            - "9001:9001"
-        links: 
-            - "infosys-eureka:infosys-eureka"
-            - "infosys-gateway:infosys-gateway"
-            - "infosys-customer:infosys-customer"
-            - "infosys-message:infosys-message"
-            - "rabbitmq:rabbitmq"
-        environment: 
-            SERVER_PORT: "9001"
-            EUREKASERVER_URI: "http://infosys-eureka:8761/eureka"
-            EUREKASERVER_PORT: "8761"
-            GATEWAYSERVER_PORT: "5555"
+    
     
