--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -7,13 +7,13 @@ services:
             - "5672:5672"
             - "15672:15672"
     infosys-eureka:
-        image: satriaprayoga/infosys-eureka:${BUILD_NAME}
+        image: satriaprayoga/infosys-eureka:infosysApp-master-20200517200451-21
         mem_limit: 1073741824
         ports: 
             - "8761:8761"
     
     infosys-gateway:
-        image: satriaprayoga/infosys-gateway:${BUILD_NAME}
+        image: satriaprayoga/infosys-gateway:infosysApp-master-20200517200451-21
         mem_limit: 1073741824
         ports: 
             - "5555:5555"
@@ -27,7 +27,7 @@ services:
             RABBITMQ_PORT: "5672"
     
     infosys-message:
-        image: satriaprayoga/infosys-oauth:${BUILD_NAME}
+        image: satriaprayoga/infosys-oauth:infosysApp-master-20200517200451-21
         mem_limit: 1073741824
         ports: 
             - "8081:8081"
@@ -45,7 +45,7 @@ services:
     
     
     infosys-oauth:
-        image: satriaprayoga/infosys-oauth:${BUILD_NAME}
+        image: satriaprayoga/infosys-oauth:infosysApp-master-20200517200451-21
         mem_limit: 1073741824
         ports: 
             - "8082:8082"
@@ -59,7 +59,7 @@ services:
             GATEWAYSERVER_PORT: "5555"
     
     infosys-customer:
-        image: satriaprayoga/infosys-customer:${BUILD_NAME}
+        image: satriaprayoga/infosys-customer:infosysApp-master-20200517200451-21
         mem_limit: 1073741824
         ports: 
             - "8084:8084"
@@ -79,7 +79,7 @@ services:
             RABBITMQ_PORT: "5672"    
             
     infosys-search:
-        image: satriaprayoga/infosys-search:${BUILD_NAME}
+        image: satriaprayoga/infosys-search:infosysApp-master-20200517200451-21
         mem_limit: 1073741824
         ports: 
             - "8085:8085"
@@ -96,7 +96,7 @@ services:
             RABBITMQ_PORT: "5672"    
     
     infosys-webclient:
-        image: satriaprayoga/infosys-webclient:${BUILD_NAME}
+        image: satriaprayoga/infosys-webclient:infosysApp-master-20200517200451-21
         mem_limit: 2073741824
         ports:
             - "9001:9001"
