--- a/.travis.yml
+++ b/.travis.yml
@@ -32,3 +32,4 @@ scripts:
 - sh travis_scripts/tag_build.sh
 - sh travis_scripts/build_services.sh
 - sh travis_scripts/docker_push.sh
+- sh travis_scripts/deploy_aws.sh
