--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,20 +1,20 @@
 version: '2'
 services: 
     rabbitmq:
-        mem_limit: 1073741824
+        mem_limit: 512m
         image: rabbitmq:3-management-alpine
         ports:
             - "5672:5672"
             - "15672:15672"
     infosys-eureka:
         image: satriaprayoga/infosys-eureka:${BUILD_NAME}
-        mem_limit: 1073741824
+        mem_limit: 1g
         ports: 
             - "8761:8761"
     
     infosys-gateway:
         image: satriaprayoga/infosys-gateway:${BUILD_NAME}
-        mem_limit: 1073741824
+        mem_limit: 1g
         ports: 
             - "5555:5555"
         links: 
@@ -28,7 +28,7 @@ services:
     
     infosys-message:
         image: satriaprayoga/infosys-oauth:${BUILD_NAME}
-        mem_limit: 1073741824
+        mem_limit: 512m
         ports: 
             - "8081:8081"
         links: 
@@ -46,7 +46,7 @@ services:
     
     infosys-oauth:
         image: satriaprayoga/infosys-oauth:${BUILD_NAME}
-        mem_limit: 1073741824
+        mem_limit: 1g
         ports: 
             - "8082:8082"
         links: 
@@ -60,7 +60,7 @@ services:
     
     infosys-customer:
         image: satriaprayoga/infosys-customer:${BUILD_NAME}
-        mem_limit: 1073741824
+        mem_limit: 1g
         ports: 
             - "8084:8084"
         links: 
@@ -80,7 +80,7 @@ services:
             
     infosys-search:
         image: satriaprayoga/infosys-search:${BUILD_NAME}
-        mem_limit: 1073741824
+        mem_limit: 1g
         ports: 
             - "8085:8085"
         links: 
@@ -97,7 +97,7 @@ services:
     
     infosys-webclient:
         image: satriaprayoga/infosys-webclient:${BUILD_NAME}
-        mem_limit: 2073741824
+        mem_limit: 1g
         ports:
             - "9001:9001"
         links: 
