--- a/infosys-message/src/main/resources/application.yml
+++ b/infosys-message/src/main/resources/application.yml
@@ -11,18 +11,15 @@ eureka:
             
 spring:
   mail:
-    host: smtp.gmail.com
-    username: gilsatpray@gmail.com
-    password: Moscow2008
-    port: 587
+    host: smtp.mailtrap.io
+    username: cc2b9138408642
+    password: 0cb3a55f368c3a
+    port: 2525
     properties:
       mail:
         smtp:
           starttls:
             enable: true
-        ssl:
-          trust: smtp.gmail.com
-        auth: true
         
   rabbitmq:
     host: localhost
