elasticsearch change url

--- a/infosys-search/src/main/resources/application.yml
+++ b/infosys-search/src/main/resources/application.yml
@@ -22,7 +22,7 @@ spring:
           destination: tourEvent
           content-type: application/json
 search:
-  elasticsearch-uri: https://search-infosys-fjdc7dl4ismojlyb47lubbitsm.ap-southeast-1.es.amazonaws.com:443
+  elasticsearch-uri: http://18.141.8.244:9200
   username: admin
   password: Moscow2008_
 
