--- a/infosys-search/src/main/resources/application.yml
+++ b/infosys-search/src/main/resources/application.yml
@@ -22,7 +22,7 @@ spring:
           destination: tourEvent
           content-type: application/json
 search:
-  elasticsearch-uri: http://18.141.8.244:9200
+  elasticsearch-uri: http://ec2-18-141-8-244.ap-southeast-1.compute.amazonaws.com:9200
   username: admin
   password: Moscow2008_
 
